# ChangeLog for net-irc/rbot
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/rbot/ChangeLog,v 1.1 2003/10/05 20:43:39 zul Exp $

*rbot-0.9.6 (05 Oct 2003)

  05 Oct 2003; <chuck@gentoo.org> rbot-0.9.6.ebuild:
  Added new ebuild by Matsuu Takuto <matsuu@gentoo.org>
  closes bug #27846.
