@@ -1,4 +1,4 @@
-MD5 4c00f8b4c0bcc6d5dafadfc7127a2c96 ChangeLog 361
+MD5 367a5bd5ce1b25dc9de7e537e906c899 ChangeLog 451
 MD5 44c39c6ad372a8e5a5e7ee3311f703a7 metadata.xml 160
-MD5 8a438f018a57c4910142372271f12b4c rbot-0.9.6.ebuild 998
+MD5 fe0ac4723d9443aada00cb4b7a1d2a1c rbot-0.9.6.ebuild 991
 MD5 53971baa1052d065a78ed3a35daedd0b files/digest-rbot-0.9.6 62
